--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,7 +10,6 @@
         android:id="@+id/textView1"
         android:layout_width="218dp"
         android:layout_height="74dp"
-        android:layout_marginTop="10dp"
         android:fontFamily="@font/almendra_sc"
         android:gravity="center"
         android:text="GoodsMent"
@@ -24,12 +23,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.066" />
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:text="Create your Account"
+        android:textColor='@color/black'
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+
     <EditText
         android:id="@+id/uname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/person"
@@ -43,7 +55,7 @@
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
         android:id="@+id/email"
@@ -53,7 +65,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:inputType="textEmailAddress"
-        android:text="email"
+        android:hint="email"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/email"
         android:drawablePadding="10dp"
@@ -75,7 +87,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:inputType="phone"
-        android:text="contact number"
+        android:hint="contact number"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/phone"
         android:drawablePadding="10dp"
@@ -97,7 +109,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:inputType="text"
-        android:text="city"
+        android:hint="city"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/city"
         android:drawablePadding="10dp"
@@ -118,7 +130,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
-        android:text="password"
+        android:hint="password"
         android:inputType="textPassword"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/security"
@@ -132,5 +144,86 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/city" />
+
+    <Button
+        android:id="@+id/signup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="30dp"
+        android:text="sign up"
+        android:textColor="@color/white"
+        android:background="@drawable/btn_bg"
+        android:backgroundTint="#180AF7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="100dp"
+        android:gravity="center"
+        android:text="- Or sign up with -"
+        android:textSize="15dp"
+        android:textColor="#180AF7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup" />
+
+    <ImageButton
+        android:id="@+id/google"
+        android:layout_width="100dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#0000"
+        android:src="@drawable/googlelogo"
+        app:layout_constraintEnd_toStartOf="@+id/facebook"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <ImageButton
+        android:id="@+id/facebook"
+        android:layout_width="100dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="180dp"
+        android:backgroundTint="#0000"
+        android:src="@drawable/facebooklogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/google"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="160dp"
+        android:text="Already have an account?"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/google" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="110dp"
+        android:text="signin"
+        android:textColor="#180AF7"
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/facebook" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
