--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -20,16 +20,16 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="128dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginEnd="100dp"
-        android:text="GoodsMent"
+        android:layout_width="208dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="90dp"
         android:gravity="center"
-        android:textColor="@color/black"
+        android:text="GoodsMent"
+        android:textColor="#180AF7"
+        android:textSize="30dp"
         android:textStyle="bold"
-        android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/animationView" />
