--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -13,7 +13,7 @@
         android:fontFamily="@font/almendra_sc"
         android:gravity="center"
         android:text="GoodsMent"
-        android:textColor="#180AF7"
+        android:textColor="@color/blue"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,7 +47,7 @@
         android:drawableLeft="@drawable/person"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="name"
+        android:hint="Name"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -65,7 +65,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:inputType="textEmailAddress"
-        android:hint="email"
+        android:hint="Email"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/email"
         android:drawablePadding="10dp"
@@ -87,7 +87,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:inputType="phone"
-        android:hint="contact number"
+        android:hint="Contact Number"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/phone"
         android:drawablePadding="10dp"
@@ -109,7 +109,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:inputType="text"
-        android:hint="city"
+        android:hint="City"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/city"
         android:drawablePadding="10dp"
@@ -130,7 +130,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
-        android:hint="password"
+        android:hint="Password"
         android:inputType="textPassword"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/security"
@@ -149,13 +149,13 @@
         android:id="@+id/signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="105dp"
         android:layout_marginTop="25dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="105dp"
+        android:background="@drawable/btn_bg"
+        android:backgroundTint="@color/blue"
         android:text="sign up"
         android:textColor="@color/white"
-        android:background="@drawable/btn_bg"
-        android:backgroundTint="#180AF7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
@@ -170,7 +170,7 @@
         android:gravity="center"
         android:text="- Or sign up with -"
         android:textSize="15dp"
-        android:textColor="#180AF7"
+        android:textColor="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup" />
@@ -206,7 +206,7 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="160dp"
-        android:text="Already have an account?"
+        android:text="Already have an Account?"
         android:textColor="@color/black"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -214,13 +214,13 @@
         app:layout_constraintTop_toBottomOf="@+id/google" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/signin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="110dp"
-        android:text="signin"
-        android:textColor="#180AF7"
+        android:text="Sign in"
+        android:textColor="@color/blue"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
