--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -27,7 +27,8 @@
         android:layout_marginEnd="90dp"
         android:gravity="center"
         android:text="GoodsMent"
-        android:textColor="#180AF7"
+        android:fontFamily="@font/almendra_sc"
+        android:textColor="@color/blue"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
