--- a/app/src/main/res/layout/slider_layout.xml
+++ b/app/src/main/res/layout/slider_layout.xml
@@ -7,6 +7,7 @@
     app:flow_horizontalAlign="center">
 
     <ImageView
+        android:id="@+id/titleimage"
         android:layout_width="match_parent"
         android:layout_height="312dp"
         android:layout_marginTop="10dp"
@@ -17,9 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Choose your Destination"
+        android:text="@string/heading_0ne"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:textSize="30dp"
         android:textStyle="bold"/>
 
@@ -28,8 +29,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:text="bhhbdhbdhbdhbhdcbhbvvbhbchbdhwvdgvhvcgvhdbdhbhewhvchhdchcdb"
+        android:layout_marginTop="50dp"
+        android:text="@string/desc_one"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="30dp"/>
+        android:textSize="20dp" />
 </LinearLayout>
