--- a/app/src/main/res/layout/slider_layout.xml
+++ b/app/src/main/res/layout/slider_layout.xml
@@ -25,7 +25,7 @@
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/textdeccription"
+        android:id="@+id/textdescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
