--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".forgotpassword">
 
     <ImageView
@@ -15,7 +16,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="85dp"
         android:backgroundTint="#EEACA9A9"
-        android:src="@drawable/forgetpassword"
+        android:src="@drawable/forgetpasswod"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -30,9 +31,11 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="55dp"
         android:layout_marginEnd="55dp"
+        android:fontFamily="@font/adamina"
         android:text="Please Enter Your E-Mail Address To Recieve a Verification Code."
         android:textColor="@color/black"
         android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgotpasswordimg">
@@ -51,6 +54,7 @@
         android:drawablePadding="10dp"
         android:elevation="3dp"
         android:hint="E-Mail"
+        android:fontFamily="@font/adamina"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:paddingLeft="20dp"
@@ -75,10 +79,11 @@
         android:backgroundTint="#002868"
         android:padding="10dp"
         android:text="Send"
+        android:fontFamily="@font/adamina"
+        android:textStyle="bold"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20dp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgotpasswordemail">
