--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,13 +9,15 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="218dp"
-        android:layout_height="74dp"
-        android:fontFamily="@font/almendra_sc"
+        android:layout_width="313dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:fontFamily="@font/faster_one"
         android:gravity="center"
         android:text="GoodsMent"
         android:textColor="@color/blue"
-        android:textSize="30dp"
+        android:textSize="35dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,13 +34,15 @@
         android:layout_marginTop="70dp"
         android:text="Login to your Account"
         android:textColor='@color/black'
+        android:textStyle="bold"
+        android:fontFamily="@font/adamina"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
     <EditText
-        android:id="@+id/uname"
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -46,6 +50,7 @@
         android:layout_marginEnd="30dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/email"
+        android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Email"
@@ -68,6 +73,7 @@
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/security"
         android:drawablePadding="10dp"
+        android:fontFamily="@font/adamina"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -77,7 +83,7 @@
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/uname">
+        app:layout_constraintTop_toBottomOf="@+id/email">
 
     </EditText>
 
@@ -92,6 +98,8 @@
         android:backgroundTint="@color/blue"
         android:text="sign in"
         android:textColor="@color/white"
+        android:fontFamily="@font/adamina"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
@@ -103,6 +111,8 @@
         android:layout_marginStart="240dp"
         android:layout_marginTop="20dp"
         android:text="Forgot Password?"
+        android:fontFamily="@font/adamina"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,11 +129,13 @@
         android:layout_marginEnd="100dp"
         android:gravity="center"
         android:text="- Or sign in with -"
+        android:fontFamily="@font/adamina"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/forgotpassword" />
 
     <ImageButton
         android:id="@+id/google"
@@ -158,6 +170,8 @@
         android:layout_marginTop="30dp"
         android:text="Don't have an account?"
         android:textColor="@color/black"
+        android:fontFamily="@font/adamina"
+        android:textStyle="bold"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/google" />
@@ -167,10 +181,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="110dp"
+        android:layout_marginEnd="90dp"
+        android:fontFamily="@font/adamina"
         android:text="Sign up"
         android:textColor="@color/blue"
         android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/facebook" />
 
