--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -15,6 +15,8 @@
         android:background="#00000000"
         android:text="Skip"
         android:textColor="@color/black"
+        android:fontFamily="@font/adamina"
+        android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
