--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -20,16 +20,16 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="208dp"
-        android:layout_height="59dp"
+        android:layout_width="398dp"
+        android:layout_height="58dp"
         android:layout_marginStart="90dp"
         android:layout_marginTop="180dp"
         android:layout_marginEnd="90dp"
+        android:fontFamily="@font/faster_one"
         android:gravity="center"
         android:text="GoodsMent"
-        android:fontFamily="@font/almendra_sc"
         android:textColor="@color/blue"
-        android:textSize="30dp"
+        android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
