--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -138,20 +138,20 @@
         app:layout_constraintTop_toBottomOf="@+id/txtForgotpassword" />
 
     <ImageButton
-        android:id="@+id/google"
+        android:id="@+id/btnGoogle"
         android:layout_width="100dp"
         android:layout_height="75dp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#0000"
         android:src="@drawable/googlelogo"
-        app:layout_constraintEnd_toStartOf="@+id/facebook"
+        app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/or" />
 
 
     <ImageButton
-        android:id="@+id/facebook"
+        android:id="@+id/btnFacebook"
         android:layout_width="100dp"
         android:layout_height="75dp"
         android:layout_marginTop="20dp"
@@ -159,7 +159,7 @@
         android:backgroundTint="#0000"
         android:src="@drawable/facebooklogo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/google"
+        app:layout_constraintStart_toEndOf="@+id/btnGoogle"
         app:layout_constraintTop_toBottomOf="@+id/or" />
 
     <TextView
@@ -174,7 +174,7 @@
         android:textStyle="bold"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/google" />
+        app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />
 
     <TextView
         android:id="@+id/txtSignup"
@@ -188,6 +188,6 @@
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/facebook" />
+        app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
