--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -50,7 +50,7 @@
         android:layout_marginTop="39dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/email"
+        android:drawableLeft="@drawable/ic_email"
         android:drawablePadding="10dp"
         android:elevation="3dp"
         android:hint="E-Mail"
