--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -34,13 +34,47 @@
 
     <LinearLayout
         android:id="@+id/indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="105dp"
-        android:layout_marginEnd="105dp"
+        android:layout_width="40dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="185dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="185dp"
         android:gravity="bottom"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/slideviewpager" />
+
+    <Button
+        android:id="@+id/btnback"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:background="#00000000"
+        android:drawableLeft="@drawable/ic_arrow_back"
+        android:text="Back"
+        android:fontFamily="@font/adamina"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/indicator"
+        app:layout_constraintHorizontal_bias="0.01"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/slideviewpager" />
+
+    <Button
+        android:id="@+id/btnnext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="15dp"
+        android:background="#00000000"
+        android:drawableRight="@drawable/ic_arrow"
+        android:text="Next"
+        android:fontFamily="@font/adamina"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.985"
+        app:layout_constraintStart_toEndOf="@+id/indicator"
+        app:layout_constraintTop_toBottomOf="@+id/slideviewpager" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
