--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".login">
+    tools:context=".signIn">
 
     <TextView
         android:id="@+id/textView1"
@@ -49,7 +49,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/email"
+        android:drawableLeft="@drawable/ic_email"
         android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -71,7 +71,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/security"
+        android:drawableLeft="@drawable/ic_security"
         android:drawablePadding="10dp"
         android:fontFamily="@font/adamina"
         android:ems="10"
