--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -48,7 +48,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/person"
+        android:drawableLeft="@drawable/ic_person"
         android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -73,7 +73,7 @@
         android:hint="Email"
         android:background="@drawable/input_bg"
         android:fontFamily="@font/adamina"
-        android:drawableLeft="@drawable/email"
+        android:drawableLeft="@drawable/ic_email"
         android:drawablePadding="10dp"
         android:ems="10"
         android:paddingLeft="20dp"
@@ -95,7 +95,7 @@
         android:inputType="phone"
         android:hint="Contact Number"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/phone"
+        android:drawableLeft="@drawable/ic_phone"
         android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -118,7 +118,7 @@
         android:inputType="text"
         android:hint="City"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/city"
+        android:drawableLeft="@drawable/ic_city"
         android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -141,7 +141,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/security"
+        android:drawableLeft="@drawable/ic_security"
         android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
