--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#FFFFFFFF"
     tools:context=".onboarding">
 
     <Button
@@ -27,23 +27,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginVertical="100dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnskip" />
-
-    <LinearLayout
-        android:id="@+id/indicator"
-        android:layout_width="40dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="185dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="185dp"
-        android:gravity="bottom"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slideviewpager" />
 
     <Button
         android:id="@+id/btnback"
@@ -56,7 +44,6 @@
         android:text="Back"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/indicator"
         app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/slideviewpager" />
@@ -74,7 +61,20 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.985"
-        app:layout_constraintStart_toEndOf="@+id/indicator"
         app:layout_constraintTop_toBottomOf="@+id/slideviewpager" />
+
+    <LinearLayout
+        android:id="@+id/indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="120dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/slideviewpager"></LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
