--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="blue">#002868</color>
 
     //indicator color
-    <color name="inactive">#FFFFFF</color>
+    <color name="inactive">#C4C4C4</color>
     <color name="active">#002868</color>
 
 </resources>
