--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -30,11 +30,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="80dp"
+        android:fontFamily="@font/adamina"
         android:text="Create your Account"
         android:textColor='@color/black'
         android:textSize="20dp"
-        android:fontFamily="@font/adamina"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -171,69 +171,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="100dp"
-        android:gravity="center"
-        android:text="- Or sign up with -"
-        android:textSize="15dp"
-        android:fontFamily="@font/adamina"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />
-
-    <ImageButton
-        android:id="@+id/google"
-        android:layout_width="100dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="#0000"
-        android:src="@drawable/googlelogo"
-        app:layout_constraintEnd_toStartOf="@+id/facebook"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <ImageButton
-        android:id="@+id/facebook"
-        android:layout_width="100dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="180dp"
-        android:backgroundTint="#0000"
-        android:src="@drawable/facebooklogo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/google"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="145dp"
         android:fontFamily="@font/adamina"
         android:text="Already have an Account?"
         android:textColor="@color/black"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/google" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />
 
     <TextView
         android:id="@+id/txtsignin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="105dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="90dp"
         android:fontFamily="@font/adamina"
         android:text="Sign in"
         android:textColor="@color/blue"
@@ -241,6 +202,6 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/facebook" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
