--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -137,10 +137,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtForgotpassword" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/btnGoogle"
-        android:layout_width="100dp"
-        android:layout_height="75dp"
+        android:layout_width="70dp"
+        android:layout_height="55dp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#0000"
@@ -150,10 +150,10 @@
         app:layout_constraintTop_toBottomOf="@+id/or" />
 
 
-    <ImageButton
+    <ImageView
         android:id="@+id/btnFacebook"
-        android:layout_width="100dp"
-        android:layout_height="75dp"
+        android:layout_width="70dp"
+        android:layout_height="55dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="180dp"
         android:backgroundTint="#0000"
