--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -42,6 +42,7 @@
         android:background="#00000000"
         android:drawableLeft="@drawable/ic_arrow_back"
         android:text="Back"
+        android:textAllCaps="false"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.01"
@@ -57,6 +58,7 @@
         android:background="#00000000"
         android:drawableRight="@drawable/ic_arrow"
         android:text="Next"
+        android:textAllCaps="false"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
